# Promptterfly

./: .gitignore  LICENSE  README.md  __init__.py  architecture.md  pyproject.toml  research_01_existing_managers.md  research_02_dspy.md  research_04_model_specifics.md  setup.sh  start.sh
core/: __init__.py  config.py  exceptions.py  models.py
docs/: development.md  usage.md
scripts/: placeholder.py  test_all.sh
src/promptterfly/: __init__.py  __main__.py  cli.py  repl.py
src/promptterfly/commands/: __init__.py  auto.py  auto_iterate.py  dataset.py  model.py  optimize.py  prompt.py  version.py
src/promptterfly/core/: __init__.py  config.py  exceptions.py  models.py
src/promptterfly/models/: __init__.py  client.py  registry.py
src/promptterfly/optimization/: __init__.py  engine.py  strategies.py
src/promptterfly/storage/: __init__.py  prompt_store.py  version_store.py
src/promptterfly/utils/: __init__.py  banner.py  io.py  loader.py  quotes.py  tui.py
tests/: __init__.py  conftest.py  test_auto.py  test_cli.py  test_models.py  test_optimization.py  test_storage.py
